--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/stefandesu/gbv-project-template-node#readme",
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-gbv": "github:gbv/eslint-config-gbv",
+    "eslint-config-gbv": "github:gbv/eslint-config-gbv#ecaf810",
     "lint-staged": "^10.0.2",
     "mocha": "^7.0.0",
     "mocha-eslint": "^6.0.0",
