--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "homepage": "https://github.com/stefandesu/gbv-project-template-node#readme",
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-gbv": "github:gbv/eslint-config-gbv#ecaf810",
-    "lint-staged": "^10.0.2",
-    "mocha": "^7.0.0",
+    "eslint-config-gbv": "gbv/eslint-config-gbv#467e0a1",
+    "lint-staged": "^10.0.9",
+    "mocha": "^7.1.1",
     "mocha-eslint": "^6.0.0",
     "pre-commit": "^1.2.2"
   }
